do not include requiredJvmOpts in launcher-check.yml